working on assignment three part 2, finished part 1 and refactored hw2_p2.js to form_utils.js

--- a/public_html/hw3.html
+++ b/public_html/hw3.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,12 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="static/css/coming-soon.css">
+    <link rel="stylesheet" href="static/css/hw3.css">
     <title>Homework Page 3</title>
 </head>
 <body class="background">
-    <div class="container-fluid  p-0">
-      <nav class="navbar navbar-dark" style="background-color: black;">
+    <div class="container-fluid  p-0 mb-5 pb-5">
+	<nav class="navbar navbar-dark fixed-top" style="background-color: black;">
           <div class="container-fluid">
             <a class="navbar-brand" href=".">
             <img src= 'static/media/Girdog.png'  alt="" width="100" height="100" class="d-inline-block align-text-mid">
@@ -32,7 +31,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="./hw2.html">
+                  <a class="nav-link" href="./hw2.html">
                    <img src= 'static/media/gir2.png'  alt="" class="d-inline-block align-text-mid nav-image">
                    Homework Page 2
                   </a>
@@ -78,16 +77,23 @@
           </div>
       </nav>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
-        <h1>This Page is Coming Soon To A Url Near You!</h1>
+    <br>
+    <div class="container-fluid d-flex justify-content-center pt-5 pb-5">
+        <h1>Homework Page 3 Functions</h1>
     </div>
-    <div class="container-fluid d-flex justify-content-center gir">
-        <img id='loading-gir' src= 'static/media/under-construction.gif' >
+    <div class="container-fluid d-flex justify-content-center pt-3 px-5 pb-0">
+	    <p>Hello!<br>Part 1:<br>This button will take the user to a page containing a form which will calculate and present the homework average, mid-term exam score, final exam score, and participation scores based on the user inputs.<br>Part 2:<br>Next, the part 2 button will take the user to a page where they can input a sales persons name and sales to be presented with the sales persons earnings.<br>Part 3:<br>This button will take the user to page where they will be able to convert Farenheit to Celcius and vise versa</p>
+    </div>
+    <div class="h-50 d-flex align-items-center justify-content-center pt-0">
+        <div class="d-grid gap-5 w-50">
+                <a href="./hw3/part1.html" class="btn btn-warning " role="button">Part 1</a>
+                <a href="./hw3/part2.html" class="btn btn-warning " role="button">Part 2</a>
+		<a href "./hw3/part3.html" class="btn btn-warning " role="button">Part 3</a>
+		<a href="./hw3/extra-credit.html" class="btn btn-warning" role="button">Extra Credit</a>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    
-    <script src= 'static/js/hw1.js' ></script>
 </body>
 </html>
