--- a/public_html/hw2.html
+++ b/public_html/hw2.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +12,8 @@
     <title>Homework Page 2</title>
 </head>
 <body class="background">
-    <div class="container-fluid  p-0">
-      <nav class="navbar navbar-dark" style="background-color: black;">
+    <div class="container-fluid  p-0 pb-5 mb-5">
+	<nav class="navbar navbar-dark fixed-top" style="background-color: black;">
           <div class="container-fluid">
             <a class="navbar-brand" href=".">
             <img src= 'static/media/Girdog.png'  alt="" width="100" height="100" class="d-inline-block align-text-mid">
@@ -79,19 +78,21 @@
       </nav>
     </div>
     <br>
-    <div class="container-fluid d-flex justify-content-center">
-        <h1>Placeholder</h1>
+    <div class="container-fluid d-flex justify-content-center pb-5 pt-5">
+        <h1>Homework Page 2</h1>
     </div>
-    <div class="h-50 d-flex align-items-center justify-content-center">
+    <div class="container-fluid d-flex justify-content-center pt-3 px-5 pb-0">
+	<p>Welcome! The part one button will link to a page that will display xy, 12, and 89 in the fonts defined by the assignment. The Part two button will link you to a page which displays a form accepting 3 numeric inputs. Once three inputs are placed and validated, the text area of this page will display these numbers, mean, sum, and product as well as their min and max values. Finally there is the extra credit link which will take the you to a page containing a table with exchange rate data. This table will accept an input of US dollars and display its value converted by the exhange rate organized into a table.</p>
+    </div>
+    <div class="h-50 d-flex align-items-center justify-content-center pt-0">
         <div class="d-grid gap-5 w-50">
                 <a href="./hw2/part1.html" class="btn btn-warning " role="button">Part 1</a>
                 <a href="./hw2/part2.html" class="btn btn-warning " role="button">Part 2</a>
+		<a href="./hw2/extra-credit.html" class="btn btn-warning" role="button">Extra Credit</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    
-    <script src= 'static/js/hw2.js' ></script>
 </body>
 </html>
