--- a/public_html/hw2/extra-credit.html
+++ b/public_html/hw2/extra-credit.html
@@ -9,11 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../static/css/hw2_p1.css">
-    <title>Homework Page 2 Part 1</title>
+    <title>Homework Page 2 Part 2</title>
 </head>
 <body class="background">
-    <div class="container-fluid  p-0">
-      <nav class="navbar navbar-dark" style="background-color: black;">
+    <div class="container-fluid  p-0 pb-5">
+      <nav class="navbar navbar-dark fixed-top" style="background-color: black;">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
             <img src= '../static/media/Girdog.png'  alt="" width="100" height="100" class="d-inline-block align-text-mid">
@@ -78,23 +78,70 @@
       </nav>
     </div>
     <br>
-    <div class="container-fluid d-flex justify-content-center">
-        <h1>Part 1</h1>
+    <div class="d-grid gap-4 background mt-5 pt-5">
+    	<div class="container-fluid d-flex justify-content-center">
+        	<h1>Extra Credit</h1>
+    	</div>
+	<div class="px-5 container-fluid d-flex justify-content-center">
+		<table class="invis2 table" id="extra-credit-table">
+  			<thead>
+    			<tr>
+      				<th scope="col">Currency</th>
+      				<th scope="col">Rate</th>
+      				<th scope="col">Value</th>
+    			</tr>
+  			</thead>
+  			<tbody>
+    			<tr id="euro">
+      				<td class="conversion-name">Euro</td>
+      				<td class="conversion-rate">0.84</td>
+      				<td class="conversion-result"></td>
+    			</tr>
+			<tr id="canadian-dollar">
+				<td class="conversion-name">Canadian Dollar</td>
+				<td class="conversion-rate">1.23</td>
+				<td class="conversion-result"></td>
+			</tr>
+			<tr id="hong-kong-dollar">
+				<td class="conversion-name">Hong Kong Dollar</td>
+				<td class="conversion-rate">7.76</td>
+				<td class="conversion-result"></td>
+			</tr>
+			<tr id="yen">
+				<td class="conversion-name">Japanese Yen</td>
+				<td class="conversion-rate">110.80</td>
+				<td class="conversion-result"></td>
+			</tr>
+			<tr id="peso">
+				<td class="conversion-name">Mexican Peso</td>
+				<td class="conversion-rate">19.82</td>
+				<td class="conversion-result"></td>
+			</tr>
+			<tr>
+				<td colspan="2"><strong>Enter Amount of U.S. Dollars</strong></td>
+				<td>
+					<input id="us-dollars" class="form-control" onKeyUp="validateInputBox(this)" ></input>
+					<div id="validation" class="invalid-feedback">
+			                	Please enter a valid numerical value.
+            				</div>
+				</td>
+			</tr>
+ 			</tbody>
+		</table>	
+	</div>
     </div>
-    <div class="h-50 d-flex align-items-center justify-content-center">
-        <span id="xy" class="invis" style="font-family: 'times new roman', times, serif; color: #e20707;">xy</span>
-        &nbsp; &nbsp; &nbsp;
-        <span id="12_blue" class="invis" style="font-family: arial, helvetica, sans-serif; color: #3366ff;"> 12</span>
-        &nbsp; &nbsp; &nbsp;
-        <span id="89_green" class="invis" style="color: #008000; font-family: impact;"><em> 89</em></span>
-    </div>
     <div class="container-fluid d-flex justify-content-center">
-       <a href="../hw2.html" class="w-50 btn btn-outline-warning" role="button">Return To Page 2</a>
+	<button type="button" onclick="fillConversionTable()" class="btn btn-outline-warning">Submit</button>
+    </div>
+    <div class="container-fluid d-flex justify-content-center pt-3">
+        <a href="../hw2.html" class="w-50 btn btn-outline-warning" role="button">Return To Page 2</a>
+    </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-    <script src= '../static/js/hw2_p1.js' ></script>
+	<script src= '../static/js/hw2_p1.js' ></script>
+    <script src= '../static/js/form_utils.js' ></script>
+    <script src= '../static/js/hw2_ex.js'></script>
 </body>
 </html>
