--- a/public_html/hw3/part2.html
+++ b/public_html/hw3/part2.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../static/css/hw2_p1.css">
-    <title>Homework Page 2 Part 2</title>
+    <title>Homework 3 Part 2</title>
 </head>
 <body class="background">
     <div class="container-fluid  p-0 pb-5">
@@ -31,13 +31,13 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="../hw2.html">
+                  <a class="nav-link" href="../hw2.html">
                    <img src= '../static/media/gir2.png'  alt="" class="d-inline-block align-text-mid nav-image">
                    Homework Page 2
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="../hw3.html">
+                  <a class="nav-link active" href="../hw3.html">
                    <img src= '../static/media/gir3.png'  alt="" width="50" height="50" class="d-inline-block align-text-mid nav-image">
                    Homework Page 3
                   </a>
@@ -79,28 +79,42 @@
     </div>
     <br>
     <div class="d-grid gap-4 background mt-5 pt-5">
-    <div class="container-fluid d-flex justify-content-center">
-        <h1>Part 2</h1>
-    </div>
+    	<div class="container-fluid d-flex justify-content-center">
+        	<h1>Homework 3 - Part 2</h1>
+    	</div>
     <div class="d-flex align-items-center justify-content-center">
         <form id="form-container">
           <div class="mb-3">
-            <label for="number1" class="form-label">Number 1</label>
-            <input class="form-control" id="number1" onKeyUp="validateInputBox(this)">
+            <label for="seller-name" class="form-label">Sellers's Name</label>
+            <input class="form-control" id="seller-name" onKeyUp="validateInputBox(this)">
             <div id="validation1" class="invalid-feedback">
                 Please enter a valid numerical value.
             </div>
           </div>
           <div class="mb-3">
-            <label for="number2" class="form-label">Number 2</label>
-            <input class="form-control" id="number2" onKeyUp="validateInputBox(this)">
+            <label for="item1-input" class="form-label">Item 1</label>
+            <input class="form-control" id="item1-input" onKeyUp="validateInputBox(this)">
             <div id="validation2" class="invalid-feedback">
                 Please enter a valid numerical value.
             </div>
           </div>
           <div class="mb-3">
-            <label for="number3" class="form-label">Number 3</label>
-            <input class="form-control" id="number3" onKeyUp="validateInputBox(this)">
+            <label for="item2-input" class="form-label">Item 2</label>
+            <input class="form-control" id="item2-input" onKeyUp="validateInputBox(this)">
+            <div id="validation3" class="invalid-feedback">
+                Please enter a valid numerical value.
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="item3-input" class="form-label">Item 3</label>
+            <input class="form-control" id="item3-input" onKeyUp="validateInputBox(this)">
+            <div id="validation3" class="invalid-feedback">
+                Please enter a valid numerical value.
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="item4-input" class="form-label">Item 4</label>
+            <input class="form-control" id="item4-input" onKeyUp="validateInputBox(this)">
             <div id="validation3" class="invalid-feedback">
                 Please enter a valid numerical value.
             </div>
@@ -109,20 +123,62 @@
           <button type="button" onclick="resetFormAndResults()" class="btn btn-outline-warning">Reset</button>
         </form>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
-        <h2>Results:</h2>
+	<div class="px-5 container-fluid d-flex justify-content-center">
+		<table class="invis2 table" id="extra-credit-table">
+  			<thead>
+    			<tr>
+      				<th scope="col">Item#</th>
+      				<th scope="col">Price</th>
+      				<th scope="col">Qty Sold</th>
+				<th scope="col">Total $</th>
+    			</tr>
+  			</thead>
+  			<tbody>
+    			<tr id="item-1">
+      				<td class="item-num">1</td>
+      				<td class="item-price">$20.99</td>
+      				<td class="item-qt-sold"></td>
+				<td class="item-total"></td>
+    			</tr>
+			<tr id="item-2">
+                                <td class="item-num">2</td>
+                                <td class="item-price">$12.75</td>
+                                <td class="item-qt-sold"></td>
+                                <td class="item-total"></td>
+                        </tr>
+                        <tr id="item-3">
+                                <td class="item-num">3</td>
+                                <td class="item-price">$9.95</td>
+                                <td class="item-qt-sold"></td>
+                                <td class="item-total"></td>
+                        </tr>
+                        <tr id="item-4">
+                                <td class="item-num">4</td>
+                                <td class="item-price">$35.89</td>
+                                <td class="item-qt-sold"></td>
+                                <td class="item-total"></td>
+                        </tr>
+			<tr>
+				<td colspan="3"><strong>Total Amount Sold</strong></td>
+				<td id="total-amount-sold"></td>
+			</tr>
+			<tr>
+				<td colspan="3"><strong>Total Weekly Earnings</strong></td>
+				<td id="total-weekly-earnings"></td>
+			</tr>
+ 			</tbody>
+		</table>	
+	</div>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
-        <textarea disabled style="background: white" rows="5" id="result">Enter 3 numbers in the fields above to have their sum, average, product, min and max displayed here!</textarea>
-    </div>
-    <div class="container-fluid d-flex justify-content-center">
-       <a href="../hw2.html" class="w-50 btn btn-outline-warning" role="button">Return To Page 2</a>
+    <div class="container-fluid d-flex justify-content-center pt-3">
+        <a href="../hw3.html" class="w-50 btn btn-outline-warning" role="button">Return To Page 3</a>
     </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+	<script src= '../static/js/hw2_p1.js' ></script>
     <script src= '../static/js/form_utils.js' ></script>
+    <script src= '../static/js/hw3_p2.js'></script>
 </body>
 </html>
