working on assignment three extracredit, finished part 2 and 3

--- a/public_html/hw3.html
+++ b/public_html/hw3.html
@@ -88,7 +88,7 @@
         <div class="d-grid gap-5 w-50">
                 <a href="./hw3/part1.html" class="btn btn-warning " role="button">Part 1</a>
                 <a href="./hw3/part2.html" class="btn btn-warning " role="button">Part 2</a>
-		<a href "./hw3/part3.html" class="btn btn-warning " role="button">Part 3</a>
+		<a href="./hw3/part3.html" class="btn btn-warning " role="button">Part 3</a>
 		<a href="./hw3/extra-credit.html" class="btn btn-warning" role="button">Extra Credit</a>
         </div>
     </div>
