--- a/public_html/hw2/part1.html
+++ b/public_html/hw2/part1.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../static/css/hw2_p1.css">
+    <link rel="stylesheet" href="../static/css/my-bolded-font.css">
     <title>Homework Page 2 Part 1</title>
 </head>
 <body class="background">
